fixes for mdx issues

--- a/www/apps/docs/content/admin/onboarding.mdx
+++ b/www/apps/docs/content/admin/onboarding.mdx
@@ -1707,7 +1707,7 @@ Notice that as there are two types of flows, you'll be creating the components f
   export default ProductDetailNextjs
   ```
 
-</details>
+</Details>
 
 <Details>
   <summary>OrdersListNextjs component</summary>
