--- a/www/apps/docs/content/modules/products/serverless-module.mdx
+++ b/www/apps/docs/content/modules/products/serverless-module.mdx
@@ -100,9 +100,8 @@ Migrations are used to create your database schema. Before you can run migration
 
 The first command runs the migrations, and the second command allows you to optionally seed your database with demo products. However, you’d need the following seed file added in the root of your Next.js directory:
 
-<details>
+<Details>
   <summary>Seed file</summary>
-
   ```js title=seed-data.js
   const productCategoriesData = [
     {
@@ -193,8 +192,7 @@ The first command runs the migrations, and the second command allows you to opti
     variantsData,
   }
   ```
-
-</details>
+</Details>
 
 Then run the first and optionally second commands to migrate the database schema:
 
