--- a/www/apps/docs/content/plugins/notifications/sendgrid.mdx
+++ b/www/apps/docs/content/plugins/notifications/sendgrid.mdx
@@ -71,7 +71,7 @@ Medusa supports localization so you can also create multiple templates for multi
 
 ## Template Reference
 
-This section covers the template types supported by the plugin and what variables you can expect in your dynamic template. You can use the variables to add details like order total or customer name.
+This section covers the template types supported by the plugin and what variables you can expect in your dynamic template. You can use the variables to add Details like order total or customer name.
 
 :::note
 
@@ -85,9 +85,9 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to the customer when they place a new order.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
+  
   ```json noReport
   {
     "beforeInsert": [Function],
@@ -304,7 +304,7 @@ You don’t have to create a template for every type in the reference. You can s
     "updated_at": Any<Date>,
   }
   ```
-</details>
+</Details>
 
 ### Order Canceled
 
@@ -312,9 +312,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to a customer when their order is canceled.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   {
     "beforeInsert": [Function],
@@ -535,7 +534,7 @@ You don’t have to create a template for every type in the reference. You can s
     "updated_at": Any<Date>,
   }
   ```
-</details>
+</Details>
 
 ### Order Shipment Created
 
@@ -543,9 +542,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to the customer when a shipment of their order has been created.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   {
     "date": Any<String>,
@@ -817,7 +815,7 @@ You don’t have to create a template for every type in the reference. You can s
     "tracking_number": "",
   }
   ```
-</details>
+</Details>
 
 ### Order Return Requested
 
@@ -825,9 +823,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to the customer when a return request is made for an order.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   {
     "date": Any<String>,
@@ -1259,7 +1256,7 @@ You don’t have to create a template for every type in the reference. You can s
     "subtotal": "12.00 USD",
   }
   ```
-</details>
+</Details>
 
 ### Order Items Returned
 
@@ -1267,9 +1264,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to the customer when an order’s items have been returned.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   {
     "date": Any<String>,
@@ -1701,7 +1697,7 @@ You don’t have to create a template for every type in the reference. You can s
     "subtotal": "12.00 USD",
   }
   ```
-</details>
+</Details>
 
 ### Claim Shipment Created
 
@@ -1709,9 +1705,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to the customer when a Claim shipment has been created.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   {
     "claim": Object {
@@ -1998,7 +1993,7 @@ You don’t have to create a template for every type in the reference. You can s
     "tracking_number": "",
   }
   ```
-</details>
+</Details>
 
 ### Swap Created
 
@@ -2006,9 +2001,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to the customer when a swap for an order has been created.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   {
     "locale": null,
@@ -2507,7 +2501,7 @@ You don’t have to create a template for every type in the reference. You can s
     "additional_total": "11.25 USD"
   }
   ```
-</details>
+</Details>
 
 ### Swap Shipment Created
 
@@ -2515,9 +2509,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to the customer when a shipment of a swap of an order has been created.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   Object {
     "additional_total": "16.88 USD",
@@ -3087,7 +3080,7 @@ You don’t have to create a template for every type in the reference. You can s
     "tracking_number": "",
   }
   ```
-</details>
+</Details>
 
 ### Swap Received
 
@@ -3095,9 +3088,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to the customer when a swap of an order has been received.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   {
     "locale": null,
@@ -3597,7 +3589,7 @@ You don’t have to create a template for every type in the reference. You can s
     "additional_total": "11.25 USD"
   }
   ```
-</details>
+</Details>
 
 ### Gift Card Created
 
@@ -3605,9 +3597,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be to the customer sent when a gift card in their order has been created.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   Object {
     "code": Any<String>,
@@ -3765,7 +3756,7 @@ You don’t have to create a template for every type in the reference. You can s
     "display_value": 4
   }
   ```
-</details>
+</Details>
 
 ### Customer Password Reset
 
@@ -3773,9 +3764,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to the customer when they request a password reset.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   Object {
     "id": Any<String>,
@@ -3785,7 +3775,7 @@ You don’t have to create a template for every type in the reference. You can s
     "token": Any<String>,
   }
   ```
-</details>
+</Details>
 
 ### User Password Reset
 
@@ -3793,16 +3783,15 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to the admin user when they request a password reset.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   Object {
     "email": "test@testson.com",
     "token": Any<String>,
   }
   ```
-</details>
+</Details>
 
 ### Restock Notification
 
@@ -3810,9 +3799,8 @@ You don’t have to create a template for every type in the reference. You can s
 
 **Description:** Template to be sent to admin users when a product has hit the restock quantity threshold.
 
-<details>
+<Details>
   <summary>Example Data</summary>
-
   ```json noReport
   Object {
     "product": Object {
@@ -3899,7 +3887,7 @@ You don’t have to create a template for every type in the reference. You can s
     ]
   }
   ```
-</details>
+</Details>
 
 ---
 
@@ -4004,8 +3992,7 @@ export const POST = async (
       to: "customer@mail.com",
       dynamic_template_data: { dynamic: "data" },
     }
-
-  sendgridService.sendEmail(sendOptions)
+    sendgridService.sendEmail(sendOptions)
 }
 ```
 
