--- a/www/apps/docs/content/user-guide.mdx
+++ b/www/apps/docs/content/user-guide.mdx
@@ -39,9 +39,9 @@ You’ll find at the top of the page a search bar. You can use this search bar t
 
 You can open the search window using the shortcuts:
 
-Windows and Linux: <kbd>CTRL</kbd> + <kbd>K</kbd>
+Windows and Linux: <Kbd>CTRL</Kbd> + <Kbd>K</Kbd>
 
-Mac OS: <kbd>⌘</kbd> + <kbd>K</kbd>
+Mac OS: <Kbd>⌘</Kbd> + <Kbd>K</Kbd>
 
 :::
 
