--- a/www/apps/docs/content/user-guide/tips/bulk-editor.mdx
+++ b/www/apps/docs/content/user-guide/tips/bulk-editor.mdx
@@ -54,6 +54,6 @@ There are multiple ways you can edit cells in a bulk editor:
 
 You can use the following shortcuts while working with the bulk editor:
 
-- <kbd>tab</kbd>: Persist the current cell's value and move focus to the next cell.
-- <kbd>backspace</kbd>: Delete the value of the selected cell(s).
-- <kbd children={getOsShortcut()}></kbd> + <kbd>Z</kbd>: Undo a change you made in the currently selected cell(s).
+- <Kbd>tab</Kbd>: Persist the current cell's value and move focus to the next cell.
+- <Kbd>backspace</Kbd>: Delete the value of the selected cell(s).
+- <Kbd children={getOsShortcut()}></Kbd> + <Kbd>Z</Kbd>: Undo a change you made in the currently selected cell(s).
