--- a/www/apps/docs/content/create-medusa-app.mdx
+++ b/www/apps/docs/content/create-medusa-app.mdx
@@ -41,11 +41,9 @@ In your terminal, run the following command:
 
 <Tabs groupId="npxyarn" isCodeTabs={true}>
   <TabItem value="npx" label="NPX" default>
-
-  ```bash
-  npx create-medusa-app@latest
-  ```
-
+    ```bash
+    npx create-medusa-app@latest
+    ```
   </TabItem>
   {/* <TabItem value="yarn" label="Yarn">
 
@@ -55,70 +53,56 @@ In your terminal, run the following command:
 
   </TabItem> */}
   <TabItem value="pnpm" label="pnpm">
-
-  ```bash
-  pnpm dlx create-medusa-app@latest
-  ```
-
+    ```bash
+    pnpm dlx create-medusa-app@latest
+    ```
   </TabItem>
 </Tabs>
 
-<details>
-<summary>
-Command Options
-</summary>
+<Details>
+  <summary>Command Options</summary>
+  The `create-medusa-app` command can accept the following options:
 
-The `create-medusa-app` command can accept the following options:
+  - `--repo-url <url>`: The repository URL to create the project from. By default it will be `https://github.com/medusajs/medusa-starter-default`.
+  - `--seed`: A flag indicating whether the database should be seeded with demo data. By default, seeding is disabled.
+  - `--no-boilerplate`: A flag that removes all files added for an enhanced onboarding experience (files under `src/admin`, `src/api`, etc...). This is helpful if you want to create a clean project, and is only recommended if you're familiar with Medusa.
+  - `--no-browser`: Disables opening the browser at the end of the project creation and only shows success message.
+  - `--skip-db`: Skips creating the database, running migrations, and seeding, and subsequently skips opening the browser. Useful if you want to set the database URL at a later point in the configurations.
+  - `--db-url <url>`: Skips database creation and sets the database URL to the provided URL. Throws an error if connection to the database fails. Will still run migrations and open the admin after project creation. Useful if you already have a database created, locally or remotely.
+  - `--no-migrations`: Skips running migrations, creating admin user, and seeding. If used, it's expected that you pass the `--db-url` option with a URL of a database that has all necessary migrations. Otherwise, unexpected errors will occur. Helpful only if combined with `--db-url`.
+  - `--directory-path <path>`: Allows specifying the parent directory path to create the directory of the new project in.
+  - `--with-nextjs-starter`: Installs the Next.js starter storefront under the `<PROJECT_NAME>-storefront` directory, where `<PROJECT_NAME>` is the name of the project you enter in the first question. If the `<PROJECT_NAME>-storefront` directory already exists, random characters are added at the end of `<PROJECT_NAME>-storefront`.
+</Details>
 
-- `--repo-url <url>`: The repository URL to create the project from. By default it will be `https://github.com/medusajs/medusa-starter-default`.
-- `--seed`: A flag indicating whether the database should be seeded with demo data. By default, seeding is disabled.
-- `--no-boilerplate`: A flag that removes all files added for an enhanced onboarding experience (files under `src/admin`, `src/api`, etc...). This is helpful if you want to create a clean project, and is only recommended if you're familiar with Medusa.
-- `--no-browser`: Disables opening the browser at the end of the project creation and only shows success message.
-- `--skip-db`: Skips creating the database, running migrations, and seeding, and subsequently skips opening the browser. Useful if you want to set the database URL at a later point in the configurations.
-- `--db-url <url>`: Skips database creation and sets the database URL to the provided URL. Throws an error if connection to the database fails. Will still run migrations and open the admin after project creation. Useful if you already have a database created, locally or remotely.
-- `--no-migrations`: Skips running migrations, creating admin user, and seeding. If used, it's expected that you pass the `--db-url` option with a URL of a database that has all necessary migrations. Otherwise, unexpected errors will occur. Helpful only if combined with `--db-url`.
-- `--directory-path <path>`: Allows specifying the parent directory path to create the directory of the new project in.
-- `--with-nextjs-starter`: Installs the Next.js starter storefront under the `<PROJECT_NAME>-storefront` directory, where `<PROJECT_NAME>` is the name of the project you enter in the first question. If the `<PROJECT_NAME>-storefront` directory already exists, random characters are added at the end of `<PROJECT_NAME>-storefront`.
+<Details className="border-t-0">
+  <summary>Example: Connect to a Vercel PostgreSQL Database</summary>
+  If you want to use a PostgreSQL database hosted on Vercel, you must use the `--db-url` option and add to the end of your connection URL `?sslmode=require`. For example:
 
-</details>
+  ```bash
+  npx create-medusa-app@latest --db-url "postgres://default:<password><host-region>.postgres.vercel-storage.com:5432/verceldb?sslmode=require"
+  ```
 
-<details className="border-t-0">
-<summary>
-Example: Connect to a Vercel PostgreSQL Database
-</summary>
+  :::note
 
-If you want to use a PostgreSQL database hosted on Vercel, you must use the `--db-url` option and add to the end of your connection URL `?sslmode=require`. For example:
+  If the database already has the necessary migrations and you don't need the command to run migrations, you can pass the `--no-migrations` option.
 
-```bash
-npx create-medusa-app@latest --db-url "postgres://default:<password><host-region>.postgres.vercel-storage.com:5432/verceldb?sslmode=require"
-```
+  :::
+</Details>
 
-:::note
+<Details className="border-t-0">
+  <summary>Example: Connect to a Supabase Database</summary>
+  If you want to connect to a Supabase database, you must use the `--db-url` option with its value beign the connection URL to your Supabase database. For example:
 
-If the database already has the necessary migrations and you don't need the command to run migrations, you can pass the `--no-migrations` option.
+  ```bash
+  npx create-medusa-app@latest --db-url postgresql://postgres:<password>@<host>.supabase.co:5432/postgres
+  ```
 
-:::
+  :::note
 
-</details>
+  If the database already has the necessary migrations and you don't need the command to run migrations, you can pass the `--no-migrations` option.
 
-<details className="border-t-0">
-<summary>
-Example: Connect to a Supabase Database
-</summary>
-
-If you want to connect to a Supabase database, you must use the `--db-url` option with its value beign the connection URL to your Supabase database. For example:
-
-```bash
-npx create-medusa-app@latest --db-url postgresql://postgres:<password>@<host>.supabase.co:5432/postgres
-```
-
-:::note
-
-If the database already has the necessary migrations and you don't need the command to run migrations, you can pass the `--no-migrations` option.
-
-:::
-
-</details>
+  :::
+</Details>
 
 ## Step 2: Specify Project Name
 
@@ -136,7 +120,7 @@ You'll then be prompted to enter an admin email for your admin user. You'll be u
 
 If you didn't pass the `--with-nextjs-starter` option, you'll be asked if you want to install the [Next.js starter storefront](./starters/nextjs-medusa-starter.mdx) along with the Medusa backend. This will install the storefront under the `<PROJECT_NAME>-storefront` directory, where `<PROJECT_NAME>` is the name of the project you specified in step 2.
 
-If you want to install the storefront, type `y` and press <kbd>enter</kbd>. If not, you can use the default value `N` and just press <kbd>enter</kbd>.
+If you want to install the storefront, type `y` and press <Kbd>enter</Kbd>. If not, you can use the default value `N` and just press <Kbd>enter</Kbd>.
 
 :::note
 
