--- a/www/apps/docs/content/modules/products/products.mdx
+++ b/www/apps/docs/content/modules/products/products.mdx
@@ -111,9 +111,8 @@ For example, if a variant's price is 10 USD, it's stored is `1000`, as in 1,000 
 
 For zero-decimal currencies, the amount is still stored as an integer without multiplying by a 100. For example, if a variant's price is ¥500, it's stored as `500`.
 
-<details>
+<Details>
   <summary>Zero-decimal Currencies</summary>
-
   - BIF
   - CLP
   - DJF
@@ -130,8 +129,7 @@ For zero-decimal currencies, the amount is still stored as an integer without mu
   - XAF
   - XOF
   - XPF
-
-</details>
+</Details>
 
 This logic of formatting the price is not handled in the backend. So, when you add a product variant using the Admin APIs, you must format the price as explained earlier. The backend stores the price as received from API requests.
 
