--- a/packages/translation/package.json
+++ b/packages/translation/package.json
@@ -45,12 +45,12 @@
     "medusa-react": "^9.0.0"
   },
   "dependencies": {
+    "@medusajs/modules-sdk": "workspace:^",
+    "@medusajs/utils": "workspace:^",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "medusa-core-utils": "^1.2.0",
-    "typeorm": "0.3.17",
-    "@medusajs/utils": "workspace:^",
-    "@medusajs/modules-sdk": "workspace:^"
+    "typeorm": "0.3.17"
   },
   "gitHead": "81a7ff73d012fda722f6e9ef0bd9ba0232d37808",
   "keywords": [
