fix index links

--- a/www/apps/docs/content/references/entities/classes/Product.mdx
+++ b/www/apps/docs/content/references/entities/classes/Product.mdx
@@ -67,7 +67,7 @@ A product is a saleable item that holds general information such as name or desc
       },
       {
         "name": "is_active",
-        "type": "[`Boolean`](../_index.mdx#boolean)",
+        "type": "[`Boolean`](../index.mdx#boolean)",
         "description": "A flag to make product category visible/hidden in the store front",
         "optional": false,
         "defaultValue": "false",
@@ -76,7 +76,7 @@ A product is a saleable item that holds general information such as name or desc
       },
       {
         "name": "is_internal",
-        "type": "[`Boolean`](../_index.mdx#boolean)",
+        "type": "[`Boolean`](../index.mdx#boolean)",
         "description": "A flag to make product category an internal category for admins",
         "optional": false,
         "defaultValue": "false",
