--- a/www/apps/docs/content/references/entities/classes/ProductCategory.mdx
+++ b/www/apps/docs/content/references/entities/classes/ProductCategory.mdx
@@ -66,7 +66,7 @@ A product category can be used to categorize products into a hierarchy of catego
       },
       {
         "name": "is_active",
-        "type": "[`Boolean`](../_index.mdx#boolean)",
+        "type": "[`Boolean`](../index.mdx#boolean)",
         "description": "A flag to make product category visible/hidden in the store front",
         "optional": false,
         "defaultValue": "false",
@@ -75,7 +75,7 @@ A product category can be used to categorize products into a hierarchy of catego
       },
       {
         "name": "is_internal",
-        "type": "[`Boolean`](../_index.mdx#boolean)",
+        "type": "[`Boolean`](../index.mdx#boolean)",
         "description": "A flag to make product category an internal category for admins",
         "optional": false,
         "defaultValue": "false",
@@ -194,7 +194,7 @@ A product category can be used to categorize products into a hierarchy of catego
   },
   {
     "name": "is_active",
-    "type": "[`Boolean`](../_index.mdx#boolean)",
+    "type": "[`Boolean`](../index.mdx#boolean)",
     "description": "A flag to make product category visible/hidden in the store front",
     "optional": false,
     "defaultValue": "false",
@@ -203,7 +203,7 @@ A product category can be used to categorize products into a hierarchy of catego
   },
   {
     "name": "is_internal",
-    "type": "[`Boolean`](../_index.mdx#boolean)",
+    "type": "[`Boolean`](../index.mdx#boolean)",
     "description": "A flag to make product category an internal category for admins",
     "optional": false,
     "defaultValue": "false",
