--- a/www/apps/docs/content/development/api-routes/create.mdx
+++ b/www/apps/docs/content/development/api-routes/create.mdx
@@ -539,22 +539,20 @@ After using `MedusaError`, the returned error in the response provides a clearer
 ```
 
 <Details>
-<Summary>
-Available MedusaError Types and their respective status codes
-</Summary>
+  <Summary>Available MedusaError Types and their respective status codes</Summary>
 
-The default response code is `500` unless mentioned otherwise.
+  The default response code is `500` unless mentioned otherwise.
 
-- `MedusaError.Types.DB_ERROR`: Sets the response code to `500`.
-- `MedusaError.Types.DUPLICATE_ERROR`: Sets the response code to `422`.
-- `MedusaError.Types.INVALID_ARGUMENT`
-- `MedusaError.Types.INVALID_DATA`: Sets the resposne code to `400`.
-- `MedusaError.Types.UNAUTHORIZED`: Sets the resposne code to `401`.
-- `MedusaError.Types.NOT_FOUND`: Sets the response code to `404`.
-- `MedusaError.Types.NOT_ALLOWED`: Sets the resposne code to `400`.
-- `MedusaError.Types.UNEXPECTED_STATE`
-- `MedusaError.Types.CONFLICT`: Sets the resposne code to `409`.
-- `MedusaError.Types.PAYMENT_AUTHORIZATION_ERROR`: Sets the resposne code to `422`.
+  - `MedusaError.Types.DB_ERROR`: Sets the response code to `500`.
+  - `MedusaError.Types.DUPLICATE_ERROR`: Sets the response code to `422`.
+  - `MedusaError.Types.INVALID_ARGUMENT`
+  - `MedusaError.Types.INVALID_DATA`: Sets the resposne code to `400`.
+  - `MedusaError.Types.UNAUTHORIZED`: Sets the resposne code to `401`.
+  - `MedusaError.Types.NOT_FOUND`: Sets the response code to `404`.
+  - `MedusaError.Types.NOT_ALLOWED`: Sets the resposne code to `400`.
+  - `MedusaError.Types.UNEXPECTED_STATE`
+  - `MedusaError.Types.CONFLICT`: Sets the resposne code to `409`.
+  - `MedusaError.Types.PAYMENT_AUTHORIZATION_ERROR`: Sets the resposne code to `422`.
 
 </Details>
 
