fix component name

--- a/www/apps/docs/content/development/backend/install.mdx
+++ b/www/apps/docs/content/development/backend/install.mdx
@@ -101,7 +101,7 @@ curl localhost:9000/store/products
     },
     {
       title: "Can't Connect to PostgreSQL Docker Container",
-      content: <PostgresDockerError />
+      content: <DockerSection />
     },
     {
       title: 'Error: connect ECONNREFUSED ::1:5432',
